--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -27,7 +27,7 @@
 <% end %>
 </div>
 
-<table class="tbl table-hover"> 
+<table class="tbl2 table-hover table-striped table-bordered"> 
   <thead>
       <tr>
           <th>Claim #</th>
