--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All Forms') %>
 <%= render 'shared/modal', size: 'lg' %>
 
-<table class="tbl table-hover" >
+<table class="tbl2 table-hover table-striped table-bordered" >
   <thead>
       <tr>
 	  <th class='tbl_lg'>Name</th>
