--- a/app/views/paystubs/index.html.erb
+++ b/app/views/paystubs/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All Pay Stubs') %>
 <%= render 'shared/modal' %>
 
-<table class="tbl table-hover">  <!--table table-hover table-condensed" >  -->
+<table class="tbl2 table-hover table-striped table-bordered">  <!--table table-hover table-condensed" >  -->
   <thead>
       <tr>
           <th class="tbl_sm">#</th>
