--- a/app/views/prescriptions/index.html.erb
+++ b/app/views/prescriptions/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="col-sm-6 col-sm-offset-3">
 <h3><%= link_to @patient.full_name, @patient %> - Prescriptions: </h3>
-<table class="tbl table-hover"> 
+<table class="tbl2 table-hover table-striped table-bordered"> 
   <thead>
       <tr>
           <th class="tbl_sm">Id</th>
