--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Doctor's schedules") %>
 <%= render "shared/modal", size: 'md' %>
 
-<div class="col-sm-6 col-sm-offset-3">
+<div class="col-md-6 col-md-offset-2">
 <h3 class="display-1">Doctor's Schedules</h3>
 <table class="tbl2 table-hover table-striped table-bordered" >
   <thead>
