--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,6 @@
+
+<div class="col-md-4 col-sm-5 col-md-offset-2 col-sm-offset-2">
+<h3 class='display-1'><%= yield(:title) %></h3>
 <div class="well">
 
 <%= simple_form_for @user,  :html => { :role => 'form'}  do |f| %>
@@ -17,3 +20,5 @@
 <% end %>
 
 </div>
+</div>
+
