--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'All users') %>
 
-<table class="tbl table-hover">
+<table class="tbl2 table-hover table-striped table-bordered">
    <thead>
       <tr>
           <th>User</th>
