--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Patient Charts') %>
 <%= render "shared/modal", size: 'lg' %>
 
-<table class="tbl table-hover">
+<table class="tbl2 table-hover table-striped table-bordered">
   <thead>
       <tr>
 	  <th><%= sortable 'filename', :Patient %></th> 
