--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -6,7 +6,7 @@
 <%= render "shared/modal" %>
 
 <div id='page'>
-<table class="tbl table-hover" >
+<table class="tbl2 table-hover table-striped table-bordered" >
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
