--- a/app/views/layouts/_find.html.erb
+++ b/app/views/layouts/_find.html.erb
@@ -8,10 +8,11 @@
   <div class="form-group">
     <div class="col-sm-12 col-md-10 padding-0">
 	  <%= f.search_field :findstr, 
-	   class: "has_tip", 'data-toggle': 'tooltip', placement: 'top', 
+	   class: "has_tip form-control", 'data-toggle': 'tooltip', placement: 'top', 
      	   title: tool_tip_title, 
            placeholder: "Find #{controller_name.singularize}",
-	   id: "findstr", :onChange => 'javascript: this.form.submit()'
+	   id: "findstr", :onChange => 'javascript: this.form.submit()',
+           autocomplete: "off"
           %>
      </div>
    </div>
