--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,9 @@
-<%# navigation styled for Bootstrap 3.0 %>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
+<nav class="navbar navbar-expand-lg navbar-light">
 
+    <ul class="nav navbar-nav navbar-left">
     <%= render 'layouts/logo' %>
+    </ul>
 
-    </div>
-    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
       <% if logged_in? %>
 	<% if current_user.doctor? %>
@@ -18,7 +15,5 @@
   	   <li><%= link_to "Log in", login_path %></li>
       <% end %>
       </ul>
-    </div>
-  </div>
 </nav>
 
