--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All patients') %>
 <%= render 'shared/modal' %>
 
-<table class="tbl table-hover"> <!--class="table table-hover table-condensed" > -->
+<table class="tbl2 table-hover table-striped table-bordered"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
           <th class="tbl_lmd">Name</th>
