--- a/app/views/ra_messages/index.html.erb
+++ b/app/views/ra_messages/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'All RA Files') %>
 
-<table class="tbl table-hover"> 
+<table class="tbl2 table-hover table-striped table-bordered"> 
   <thead>
       <tr>
           <th>File #</th>
