--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'shared/modal' %>
 
-<table class="tbl table-hover">  <!--table table-hover table-condensed" >  -->
+<table class="tbl2 table-hover table-striped table-bordered">  <!--table table-hover table-condensed" >  -->
   <thead>
       <tr>
 	  <th class='tbl_sm'><%= sortable 'id', '#' %></th>
