--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,5 @@
-<% provide(:title, 'Edit user') %>
+<% provide(:title, 'Update User Profile') %>
 <% provide(:button_text, 'Save changes') %>
-  <div class="col-sm-4 col-sm-offset-4">
-    <h3 class='display-1'>Update User Profile</h3>
+
     <%= render 'form' %>
-  </div>
+
