--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -455,7 +455,7 @@ input, select{
 }
 
 .table-hover tbody tr:hover td {
-    background: #5bc0de;
+    background: $gray-lighter;
 }
 
 /* Pagination */
