--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -1,7 +1,7 @@
     <tr>
 	<td><%= link_to "#{patient.full_name}", patient %> </td>
 	<td><%= patient.sex %></td> 
-	<td><%= patient.age_str %></td>
+	<td class="tbl_sm"><%= patient.age_str %></td>
 	<td><%= patient.pat_type %> </td>
 	<td><%= patient.last_visit_date %> </td> 
 	<td><%= patient.ohip_or_ifh_num_full %> </td>
