--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
       <tr>
 	  <th class='tbl_sm'><%= sortable 'id', '#' %></th>
-	  <th><%= sortable 'doc_id', 'Doctor' %></th>
+          <th>Doctor</th>
           <th class='tbl_lmd'>Report</th>
 	  <th><%= sortable 'rtype', 'Type' %></th>
           <th>Timeframe</th>
