--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,17 +1,23 @@
 <% provide(:title, 'All patients') %>
 <%= render 'shared/modal' %>
 
+
+<%
+    lname = (@sort == 'lname' && @direction == 'asc')?"Name &nbsp;&nbsp;<i class='glyphicon glyphicon-sort-by-alphabet'></i>":"Name &nbsp;&nbsp;<i class='glyphicon glyphicon-sort-by-alphabet-alt'></i>" 
+    dob = (@sort == 'dob' && @direction == 'asc')?"DOB &nbsp;<i class='glyphicon glyphicon-sort-by-order-alt'></i>":"DOB &nbsp;<i class='glyphicon glyphicon-sort-by-order'></i>" 
+%>
+
 <table class="tbl2 table-hover table-striped table-bordered"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
-          <th class="tbl_lmd">Name</th>
+          <th class="tbl_lmd"><%= sortable 'lname', lname.html_safe %></th>
           <th class="tbl_sm">Gen</th>
           <th class="tbl_sm">Age</th>
 	  <th class="tbl_sm">Type</th> 
 	  <th class="tbl_md">Last Visit </th>
           <th>HC/IFH #</th>
 	  <th>Expiry</th> 
-	  <th>DOB</th> 
+	  <th><%= sortable 'dob', dob.html_safe %></th> 
           <th>Phone</th>
  	  <th class="tbl_sm">Lbl</th>
  	  <th class="tbl_sm"></th>
