Active color for menus changed and made consistent in drop-downs

--- a/app/views/layouts/_docs.html.erb
+++ b/app/views/layouts/_docs.html.erb
@@ -1,4 +1,4 @@
-<% menu_items = %w(reports invoices daily_charts ) %>
+<% menu_items = %w(reports invoices daily_charts referrals letters charts ) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>"> 
   <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Docs <b class="caret"></b> </a>
   <ul class="dropdown-menu">
