--- a/app/views/layouts/_ref.html.erb
+++ b/app/views/layouts/_ref.html.erb
@@ -1,4 +1,4 @@
-<% menu_items = %w(procedures diagnoses providers drugs vaccines) %>
+<% menu_items = %w(procedures diagnoses providers drugs vaccines doctors schedules) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
   Ref <b class="caret"></b>
