--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -1,4 +1,5 @@
-<li class="dropdown nav-item">
+<% menu_items = %w(users export_files edt_files paystubs) %>
+<li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b> </a>
 <ul class="dropdown-menu">
  <li><%= link_to "Users", users_path %></li>
