--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,7 @@
       <% else %>
   	   <li><%= link_to "Log in", login_path %></li>
       <% end %>
+      <li style="width:10px;"></li>
       </ul>
 </nav>
 
