unpaid visits styling, flash

--- a/app/views/layouts/_billing.html.erb
+++ b/app/views/layouts/_billing.html.erb
@@ -1,4 +1,4 @@
-<% menu_items = %w(billings claims pay_stubs ra_messages) %>
+<% menu_items = %w(billings claims pay_stubs ra_messages visits) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>"> 
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Billing<b class="caret"></b> </a>
 <ul class="dropdown-menu">
