--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -15,7 +15,6 @@
       </tr>
   </thead>
   <tbody>
-    Visits billed, but not marked as "Paid" this year: <%= @visits.count %>. IFH visits need to be updated manually after payment is received.
 
     <%= render partial: 'unpaid_visit', collection: @visits, as: :visit %>
 
@@ -26,5 +25,6 @@
 <div class="row">
 <div class="bottom_nav">
 <%= will_paginate(@visits) %>
+</div>
 </div>
 
