bug fixes in Form#download, invoces, letters, referrals

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -415,8 +415,8 @@ input, select{
 
 .tbl2 td,
 .tbl td {
-  white-space: nowrap;
-  overflow: hidden;
+//  white-space: nowrap;
+//  overflow: hidden;
   text-overflow: ellipsis;
   padding: 2px;
 }
