--- a/app/views/daily_charts/index.html.erb
+++ b/app/views/daily_charts/index.html.erb
@@ -45,4 +45,5 @@
 <%= will_paginate @charts, params: {year: @year, month: @month}, class: "btn" %>
 <!--<# %= button_to "Add Daily Chart", new_daily_chart_path, class: "btn btn-primary col-md-12", :method => "get" %> -->
 </div>
+</div>
 
