--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 
-<div class="col-md-4 col-sm-5 col-md-offset-2 col-sm-offset-2">
+<div class="col-md-4 col-md-offset-4">
 <h3 class='display-1'><%= yield(:title) %></h3>
 <div class="well">
 
