cosmetic changes to doctors pages

--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -18,7 +18,7 @@
           <th>Phone </th>
 	  <th class='tbl_sm'> </th>
 	  <% if  current_user.admin?  %>
-	      <th class='tbl_sm'> </th>
+	      <th class='tbl_sm' colspan=2> </th>
 	  <% end %>
       </tr>
   </thead>
