--- a/app/views/layouts/_doc_billing.html.erb
+++ b/app/views/layouts/_doc_billing.html.erb
@@ -1,9 +1,9 @@
-<% menu_items = %w(billings claims pay_stubs) %>
+<% menu_items = %w(billings claims paystubs) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>"> 
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Billing<b class="caret"></b> </a>
 <ul class="dropdown-menu">
 <li><%= link_to "Daily Billing", billings_path %></li>
-<li><%= link_to "MHO Claims", claims_path  %> </li>
+<li><%= link_to "Paid Claims", claims_path  %> </li>
 <li> <%= link_to "Pay Stubs", paystubs_path, method: :get %> </li>
 </ul>
 </li>
