--- a/app/views/layouts/_doc_ref.html.erb
+++ b/app/views/layouts/_doc_ref.html.erb
@@ -5,7 +5,7 @@
   </a>
     <ul class="dropdown-menu">
       <li> <%= link_to "Schedules", schedules_path, method: :get %> </li>
-      <li> <%= link_to "Procedures", procedures_path, method: :get %> </li>
+      <li> <%= link_to "Service Codes", procedures_path, method: :get %> </li>
       <li> <%= link_to "Diagnoses", diagnoses_path, method: :get %> </li>
       <li> <%= link_to "Ins. Providers", providers_path, method: :get %> </li>
       <li> <%= link_to "Medications", drugs_path, method: :get %> </li>
