caching of main index pages

--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -40,7 +40,7 @@
       </tr>
   </thead>
   <tbody>
-	  <%= render partial: "visit", collection: @visits, locals: {date: date}  %>
+	  <%= render partial: "visit", collection: @visits, locals: {date: date}, cached: true  %>
   </tbody>
 </table>
 
