--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -59,7 +59,7 @@
   <tbody>
 
   <% @daysheet.each do |v| %>
-     <%= render 'visit', visit: v %>
+     <%= render 'visit', visit: v, cached: true %>
   <% end %>
 
   </tbody>
