--- a/app/views/billings/_visit.html.erb
+++ b/app/views/billings/_visit.html.erb
@@ -14,10 +14,10 @@
         <% end %>	
         </td>
 
-	<% if date.present? %>
-            <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(patient,visit) %></td>
+	<% if visit.date.today? %>
+            <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(patient,visit) %></td> 
          <% else %>
-            <td><%= link_to visit.entry_ts, patient_visit_path(patient,visit) %></td>
+            <td><%= link_to visit.date, patient_visit_path(patient,visit) %></td>
          <%end %>
 	<td><%= doctor.lname %> </td>
 	<td><%= link_to patient.full_name, patient %> </td>
