Search fixed in daily_charts index view. Obkect name  mismatch

--- a/app/views/daily_charts/index.html.erb
+++ b/app/views/daily_charts/index.html.erb
@@ -35,14 +35,14 @@
   </thead>
   <tbody>
 
-  <%= render @charts %>
+  <%= render @daily_charts %>
 
   </tbody>
 </table>
 
 <div class="row">
 <div class="bottom_nav">
-<%= will_paginate @charts, params: {year: @year, month: @month}, class: "btn" %>
+<%= will_paginate @daily_charts, params: {year: @year, month: @month}, class: "btn" %>
 <!--<# %= button_to "Add Daily Chart", new_daily_chart_path, class: "btn btn-primary col-md-12", :method => "get" %> -->
 </div>
 </div>
