specialist reports added to patient profile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -774,3 +774,10 @@ card > hr {
 //	height: 300px;
 	font-size: 1.35em;
 }
+
+.dropzone {
+  background: #f4f4f4 !important;
+  border: none !important;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
