--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -52,6 +52,7 @@ Medications:
 &nbsp; <%= render("invoices", remote: remote) if @patient.invoices.any? %>
 &nbsp; <%= render("letters", remote: remote) if @patient.letters.any? %>
 &nbsp; <%= render("referrals", remote: remote) if @patient.referrals.any? %>
+&nbsp; <%= render("spec_reports", remote: remote) if @patient.spec_reports.any? %>
 
   </section>
 </aside>
@@ -83,12 +84,13 @@ Medications:
 	</div>
     <% end %>
   </div>
+</div>
 
-<div class="col-sm-12 " style="position: relative; bottom: 20px; top: 5px;">
+  <p>
+<div class="col-md-6" style="position: relative; bottom: 20px; top: 5px;">
 <div class="row">  
    <%= render "buttons", remote: remote %> 
 </div>
 </div>
 
-</div>
 
