ignoring paid claims in resubmission

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -34,7 +34,7 @@ Table below provides most current schedule and is updated daily.
 
 <section id='marquee'>
   <div class="container-fluid">
-    <marquee direction="left"><h4> <%= Schedule::doc_on_duty %> Clinic will be closed January 1 ... Flu shots and other injections are provided with no wait time </h4></marquee>
+    <marquee direction="left"><h4> <%= Schedule::doc_on_duty %> ... Flu shots and other injections are provided with no wait time </h4></marquee>
   </div>
 </section>
 
