--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -775,9 +775,14 @@ card > hr {
 	font-size: 1.35em;
 }
 
-.dropzone {
-  background: #f4f4f4 !important;
-  border: none !important;
-  font-size: 2.5rem;
-  font-weight: 700;
+.dropzone .dz-message {
+  background: lightyellow; //#f5f5f5;
+  border: 3px dashed #dedede;
+  border-radius: 5px;
+  padding: 50px 0px 50px 0px;
+  color: rgba(0,0,0,.54);
+  font-weight: 500;
+  font-size: initial;
+  text-transform: uppercase;
 }
+
