Upload patient chart; Combine if chart already present

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -622,6 +622,11 @@ table.pretty {
    font-size: 18px;
 }
 
+//.modal-footer {
+//  height: 70px;	
+//}
+
+
 .turbolinks-progress-bar {
    height: 3px;
    background-color: blue;
