--- a/app/views/charts/_chart.html.erb
+++ b/app/views/charts/_chart.html.erb
@@ -1,12 +1,14 @@
      <tr>
-	<td><%= link_to chart.patient.full_name, patient_path(chart.patient) %> </td> 
-	<td><%= chart.doctor.lname if chart.doctor.present? %> </td> 
-	<td><%= chart.pages %> </td> 
-	<td><%= chart.filesize %> </td> 
-	<td><%= chart.created_at.to_date %> </td> 
-	<td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_chart_path(chart)  %></td>
+	<td><%= link_to chart.patient.full_name, chart.patient %> </td> 
+	<td class='text-center'><%= chart.pages %> </td> 
+	<td class='text-center'><%= chart.filesize %> </td> 
+	<td class='text-center'><%= chart.created_at.to_date %> </td> 
+	<td class='text-center'><%= chart.updated_at.to_date %> </td> 
+	<td class='text-center'><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_chart_path(chart)  %></td>
 	<% if current_user.admin? %>
-        <td><%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, chart, method: :delete, data: { confirm: "Are you sure you want to delete #{chart.filename}?" } %>  </td> 
+        <%# link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, chart, method: :delete, data: { confirm: "Are you sure you want to delete #{chart.filename}?" } %>  
+        <td class='text-center'> <%= link_to '<i class="glyphicon glyphicon-zoom-in"></i>'.html_safe, chart_path(chart),
+                                     remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'%></td>
 	<% end %>
      </tr>
 
