--- a/app/views/patients/_patient_docs.html.erb
+++ b/app/views/patients/_patient_docs.html.erb
@@ -1,8 +1,8 @@
-<b><%= link_to "Patient Docs (#{@patient.patient_docs.count})<span class='caret'></span>".html_safe, '#', remote: true, 'data-toggle': "collapse", 'data-target': "#patient_docs",  class: "drop-down-link" %> </b>
+<b><%= link_to "Uploaded Documents (#{@patient.patient_docs.count})<span class='caret'></span>".html_safe, '#', remote: true, 'data-toggle': "collapse", 'data-target': "#patient_docs",  class: "drop-down-link" %> </b>
 <div class="collapse panel panel-info" id="patient_docs">
   <div class="tbl patient-dropdown-panel-body">
      <table class="tbl2 table-hover table-striped table-bordered">
-       <th></th><th>Type</th><th>Date</th><th>From</th><th>File Name</th>
+       <th></th><th>Type</th><th>Date</th><th>From Dr.</th><th>File Name</th>
         <% @patient.patient_docs.each do |doc| %>
         <tr>
           <td>
@@ -12,8 +12,8 @@
           </td>
           <td> <%= doc.doc_type_str %> </td>
           <td> <%= doc.date %> </td>
-          <td> <%= doc.doctor.lname %> </td>
-          <td> <%= doc.patient_doc.file.basename rescue ''%> </td>
+          <td> <%= doc.doctor.lname rescue '' %> </td>
+          <td> <%= doc.filename %> </td>
         </tr>
         <% end %>
      </table>
