Help file, news section, chart upload form updated

--- a/app/views/charts/_form.html.erb
+++ b/app/views/charts/_form.html.erb
@@ -5,7 +5,7 @@
 
 <div id='dropzone_panel'>
   <div class="dz-message"><span>Drop PDF file here to upload</span> </div> 
-  <%= f.hint 'Please use patient file# and .pdf extension as file name' %>
+  <%= f.hint 'Please use patient file# and .pdf extension as file name. Existing charts will be appended' %>
 </div>
 
 <% end %>
