--- a/app/views/charts/new.html.erb
+++ b/app/views/charts/new.html.erb
@@ -3,6 +3,6 @@ provide(:title, 'Upload Patient Chart')
 %>
 
 <div class="col-sm-6 col-sm-offset-3">
-   <h3 class='display-1'> Upload Patient Chart </h3>
+   <h3 class='display-1'> Upload/Append Patient Chart</h3>
    <%= render 'form' %>
 </div>
