--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -341,7 +341,7 @@ Search box supports searches by Claim number, Accounting Number or Health Card N
  <p>&nbsp;</p>
 	 <a id="patient_charts"></a>
         <dt class="col-sm-1"><%= link_to "Patient Charts", "#", remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#patient_charts_modal' %></dt>
-	<dd class="col-sm-11">Patients who have designated one of the doctors working in the clinic as their family doctor are called "Clinic Patient" and have chart with history of all their visits to the clinic. Charts submenu gives access to management page for Patient Charts  </dd>
+	<dd class="col-sm-11">Patients who have designated one of the doctors working in the clinic as their family doctor are called "Clinic Patient" and have chart with history of all their visits to the clinic. Charts submenu gives access to management page for Patient Charts. New charts can be uploaded from index page, by using "Add Patient Chart" button at the bottom of the page. Uploaded file must use patient file# (patient id) as the name and 'pdf' as extension. If patient chart is already present, it will be appended with this new file's content.  </dd>
 	 </dl>
 	 </dd>
 
