--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -4,6 +4,8 @@
 
 
 <ul>
+<li> Patient charts are now uploaded one by one. Unique patient File# instead of patient name is now used as File Name. In case chart is already in the system, new file is *appended* to the existing one </li>
+<li> More Patient-related Pdf documents can now be uploaded right from patient profile. These include Referrals, Specialist Reports, Letters, Lab. Reports and Imaging Reports </li>
 <li> Billing type in Patient Profile can now only be changed if patient had no previously billed visits </li>
 <li> Help file is now using modal windows to display large forms and documents </li>
 <li> Added cash reports to Docs>Reports section. It contains all cash payments for the doctor/timeframe with the grand total shown at the bottom </li>
