Patient Search moved out into model from controller; ruby upgraded; sorting by hc_number added

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -15,7 +15,7 @@
           <th class="tbl_sm">Age</th>
 	  <th class="tbl_sm">Type</th> 
 	  <th class="tbl_md">Last Visit </th>
-          <th>HC/IFH #</th>
+          <th ><%= sortable 'ohip_num', 'HC/IFH#' %></th>
 	  <th>Expiry</th> 
 	  <th><%= sortable 'dob', dob.html_safe %></th> 
           <th>Phone</th>
