Patient role added; Gems updated

--- a/app/views/layouts/_admin_navigation.html.erb
+++ b/app/views/layouts/_admin_navigation.html.erb
@@ -10,4 +10,4 @@
   <%= render 'layouts/docs' %>
   <%= render 'layouts/ref' %>
   <%= render 'layouts/forms' %>
-  <%= render 'layouts/admin' if current_user.admin?  %>
+  <%= render 'layouts/admin' %>
