--- a/app/views/layouts/_doctor_navigation_links.html.erb
+++ b/app/views/layouts/_doctor_navigation_links.html.erb
@@ -8,7 +8,7 @@
     <%= render 'layouts/find' %>
   <% end %>
   <li class="<%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
-  <%= render 'layouts/doc_billing' %>
-  <%= render 'layouts/doc_docs' %>
-  <%= render 'layouts/doc_ref' %>
+  <%= render 'layouts/doctor_billing' %>
+  <%= render 'layouts/doctor_docs' %>
+  <%= render 'layouts/doctor_ref' %>
   <%= render 'layouts/forms' %>
