--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,8 @@
-
+<div class="row">
 <div class="col-md-4 col-md-offset-4">
-<h3 class='display-1'><%= yield(:title) %></h3>
 <div class="well">
 
+<h3 class='display-1'><%= yield(:title) %></h3>
 <%= simple_form_for @user,  :html => { :role => 'form'}  do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <%= f.input :name %>
@@ -21,4 +21,4 @@
 
 </div>
 </div>
-
+</div>
