Pharmacy Fax; Drop-up button for patient documents; Medication strength is now optional

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -744,11 +744,13 @@ card > hr {
 }
 
 .btn {
-	padding: 10px;
+//	padding: 6px;
 	margin-top: 10px;
-	border: 0 none;
-	font-weight: 800;
-	font-size: 1.1em;
+	margin-bottom: 10px;
+//	margin-left: 10px;
+//	border: 0 none;
+	font-weight: 500;
+	font-size: 1em;
 //	text-transform: uppercase;
 //	border-radius: 20px;
 }
