--- a/app/views/patients/_buttons.html.erb
+++ b/app/views/patients/_buttons.html.erb
@@ -1,33 +1,27 @@
 <% unless @patient.pat_type == DECEASED_PATIENT %>
-<div id="new_visit" class="col-sm-2 col-md-2">
-<%= button_to 'New Visit', new_patient_visit_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-primary btn-lg", method: 'get'  %> 
+<div class="col-sm-2 col-md-2">
+  <div class="btn-group">
+<%= button_to 'New Visit', new_patient_visit_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-primary btn-sm", method: 'get'  %> 
+  </div>
 </div> 
 <% end %>
 
-<div id="medication" class="col-sm-2 col-md-2">
-<%= button_to "+Medication", new_patient_medication_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-danger btn-lg", method: 'get' %>
-</div>    
-
-<% if @patient.med_count >0 %>
-<div id="prescription" class="col-sm-2 col-md-2">
-<%= button_to "Prescription", new_patient_prescription_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-info btn-lg", method: 'get'  %>
-</div>
- <% end %>
-
-<div id="invoice" class="col-sm-2 col-md-2">
-<%= button_to "Invoice", new_patient_invoice_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-warning btn-lg", method: 'get' %>
-</div>
-
-<div id="letter" class="col-sm-2 col-md-2">
-<%= button_to "Letter", new_patient_letter_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-success btn-lg", method: 'get' %>
+<div class="col-sm-4 col-md-2">
+  <div class="btn-group dropup" style="padding-right:20px;">
+  <button class="btn btn-danger btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add New <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><%= link_to 'Medication', new_patient_medication_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get' %> </li>
+    <li><%= link_to 'Invoice', new_patient_invoice_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get' %> </li>
+    <li><%= link_to "Letter", new_patient_letter_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get' %> </li>
+    <li><%= link_to "Referral", new_patient_referral_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get' %></li>
+  <% if @patient.med_count >0 %>
+    <li><%= link_to "Prescription", new_patient_prescription_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get'  %></li>
+  <% end %>
+  </ul>
+  </div>
 </div>
 
-<div id="referral" class="col-sm-2 col-md-2">
-<%= button_to "Referral", new_patient_referral_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-primary btn-lg active", method: 'get' %>
-</div>    
-
-<div id="referral" class="col-sm-4 col-md-4">
-<%= button_to "Upload Document", new_patient_patient_doc_path(@patient),  class: "btn btn-info active", method: 'get' %>
-</div>    
-    
-
+<div class="col-sm-3 col-md-4" style="padding-left:25px;">
+<%= button_to "Upload Document", new_patient_patient_doc_path(@patient),  class: "btn btn-info active btn-sm", method: 'get' %>
+</div>
