--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -51,7 +51,11 @@ Medications:
 &nbsp; <%= render("referrals", remote: remote) if @patient.referrals.any? %>
 &nbsp; <%= render("patient_docs", remote: remote) if @patient.patient_docs.any? %>
 
+
   </section>
+<div class="row">
+   <%= render "buttons", remote: remote %> 
+</div>
 </aside>
 
   <div class="col-md-6">
@@ -76,18 +80,14 @@ Medications:
 	</table>
 	<div class="spacer-10"></div>
 	<div class="row">
-	  <div class="col-md-9"><%= will_paginate @visits, class: "btn" %></div>
-	  <div class="col-md-3"> <%= link_to "Print Visit History", visit_history_patient_path(@patient),  remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-info", method: 'get' %> </div>
+	  <div class="col-md-12"> <%= link_to "Print Visit History", visit_history_patient_path(@patient),  remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-info", method: 'get' %> </div>
 	</div>
+        <div style="float:right">
+	<%= will_paginate @visits %>
+        </div>
     <% end %>
   </div>
 </div>
 
-  <p>
-<div class="col-md-6" style="position: relative; bottom: 20px; top: 5px;">
-<div class="row">  
-   <%= render "buttons", remote: remote %> 
-</div>
-</div>
 
 
